# creator.carrosel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Makefile  PRD.md  README.md  SDD.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/: config.py  main.py  visual_styles.py
app/brands/: registry.py
app/brands/prompts/: _README.md  capecodder.md  cheesebread.md  dockplus.md  flamma.md  granite.md  roberts.md  thiagaoai.md
app/integrations/: claude.py  claude_vision.py  deepseek.py  fal_client.py  perplexity.py  postforme.py  supabase_client.py
app/state/: machine.py  redis_store.py  transitions.py
app/tasks/: celery_app.py  images.py  prompts.py  publish.py  research.py
app/telegram/: bot.py  keyboards.py  notify.py
app/telegram/handlers/: callbacks.py  commands.py  messages.py
app/utils/: costs.py  logging.py  security.py
app/validators/: prompt_validator.py
infra/: Dockerfile  docker-compose.yml
infra/caddy/: Caddyfile
infra/migrations/: 0001_init.sql  0002_postforme_accounts.sql
tests/unit/: test_bot.py  test_config.py  test_keyboards.py  test_main.py  test_state_machine.py
