[project]
name = "carousel-autoposter"
version = "0.1.0"
description = "Instagram carousel autoposter via Telegram bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "python-telegram-bot>=21.0,<22.0",
    "celery[redis]>=5.4,<6.0",
    "redis>=5.0,<6.0",
    "transitions>=0.9,<1.0",
    "httpx>=0.27,<0.29",
    "anthropic>=0.34,<1.0",
    "fal-client>=0.5,<1.0",
    "supabase>=2.7,<3.0",
    "structlog>=24.4,<25.0",
    "pydantic-settings>=2.4,<3.0",
    "sentence-transformers>=3.1,<4.0",
    "tenacity>=9.0,<10.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "testcontainers>=4.8,<5.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "types-redis>=4.6,<5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
